--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -5,8 +5,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.5</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>2.2.2.RELEASE</version>
+		<relativePath/> <!-- lookup parent from repository -->		
 	</parent>
 	<groupId>com.imd.pds</groupId>
 	<artifactId>crudtarefas</artifactId>
