Update para testes: não solucionado

--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -13,10 +13,13 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>crudtarefas</name>
 	<description>Projeto para gerenciamento de tarefas</description>
+	
 	<properties>
 		<java.version>11</java.version>
 	</properties>
+	
 	<dependencies>
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
@@ -24,11 +27,10 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
-		<dependency>
+						
+		<dependency>				
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
@@ -42,7 +44,26 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 		</dependency>
-		
+
+		<dependency>
+		    <groupId>com.h2database</groupId>
+		    <artifactId>h2</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+			
+			<exclusions>
+				<exclusion>
+					<groupId>org.junit.vintage</groupId>				
+					<artifactId>junit-vintage-engine</artifactId>				
+				</exclusion>
+			</exclusions>	
+			
+		</dependency>
+
 	</dependencies>
 
 	<build>
