--- a/taskapp/src/main/resources/application.properties
+++ b/taskapp/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/crudtarefas
+spring.datasource.url= jdbc:postgresql://localhost:5432/taskapp
 spring.datasource.username= postgres
 spring.datasource.password= senha
 
@@ -6,5 +6,5 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-#spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= update
 
