--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,4 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/crudtarefas
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/taskapp
+spring.datasource.username=multitarefas
 spring.datasource.password=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto= update
+
